# langfuse-skill

./: .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml
.claude-plugin/: plugin.json
.claude/skills/langfuse/: SKILL.md
.claude/skills/langfuse/references/: tool-reference.md
.codex/skills/langfuse/references/: setup.md
.github/workflows/: docker-publish.yml  gitleaks.yml  publish-skill.yml  publish.yml  test.yml
examples/: README.md  langfuse_client_demo.py  scripts_print_first20_compact.py  scripts_print_first_trace_lines.py  scripts_print_trace_first20.py  scripts_print_trace_from_dump.py  scripts_trace_count_7d.py
langfuse_mcp/: __main__.py
skills/langfuse/: SKILL.md
skills/langfuse/references/: setup.md  tool-reference.md
skills/langfuse/scripts/: _client.py  datasets.py  exceptions.py  observations.py  prompts.py  schema.py  sessions.py  traces.py
tests/: conftest.py  fakes.py  test_basic.py  test_client.py  test_datasets.py  test_mcp_integration.py  test_prompts.py  test_scripts.py  test_tools.py
