[project]
name = "langfuse-skill"
version = "2.0.0"
description = "Langfuse skill — stateless Python scripts for Langfuse observability"
requires-python = ">=3.10"
license = {text = "MIT"}

[dependency-groups]
dev = ["ruff", "pytest"]

[tool.ruff]
line-length = 140
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # https://docs.astral.sh/ruff/rules/#error-e
    "F",      # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "I",      # https://docs.astral.sh/ruff/rules/#isort-i
    "UP",     # https://docs.astral.sh/ruff/rules/#pyupgrade-up
]

[tool.ruff.lint.isort]
combine-as-imports = true
